renames /version to /info
